<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/app_name"/>

    <TextView
        android:id="@+id/text_personal_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/text_personal_sale"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/text_personal_sale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="7dp">

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:id="@+id/imageYandexTaxi"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:src="@drawable/yandex_taxi"/>

                <Button
                    android:id="@+id/yandex_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="@string/text_podrobnee"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_marginStart="50dp">

                <ImageView
                    android:id="@+id/imageSityMobil"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:src="@drawable/sitimobil"/>

                <Button
                    android:id="@+id/sitymobil_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="@string/text_podrobnee"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="7dp">

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/imageGetTaxi"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:src="@drawable/gett"/>

                <Button
                    android:id="@+id/get_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="@string/text_podrobnee"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp">

                <ImageView
                    android:id="@+id/imageTaxiMow"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:src="@drawable/taxi_mow"/>

                <Button
                    android:id="@+id/taximow_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="@string/text_podrobnee"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>